--- a/.gitignore
+++ b/.gitignore
@@ -5,25 +5,23 @@ __pycache__/
 venv/
 .env
 
-# Node/React
-frontend/node_modules/
-frontend/build/
-frontend/.env
-frontend/.env.local
-frontend/.env.development.local
-frontend/.env.test.local
-frontend/.env.production.local
-frontend/npm-debug.log*
-frontend/yarn-debug.log*
-frontend/yarn-error.log*
+# Node
+node_modules/
+/frontend/build
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # IDE
 .vscode/
 .idea/
+*.swp
+*.swo
 
-# Uploads
+# Project specific
 uploads/
-
-# Misc
-.DS_Store
 *.log 
